Fix form label padding on mobile device

--- a/forms.less
+++ b/forms.less
@@ -13,6 +13,16 @@
     border-radius: @input-border-radius-small;
 }
 
+.form-horizontal {
+    .control-label,
+    .radio,
+    .checkbox,
+    .radio-inline,
+    .checkbox-inline {
+        padding-bottom: (@padding-base-vertical + 1); // Default padding plus a border
+    }
+}
+
 
 // Checkbox / Radio
 // --------------------------------------------------
